[package]
description = "Request-scoped SeaORM transactions for axum"
edition = "2021"
include = [
  "LICENSE",
  "README.md",
  "Cargo.toml",
  "**/*.rs",
]
license = "MIT"
name = "axum-sea-orm-tx"
repository = "https://github.com/wasdacraic/axum-sea-orm-tx/"
version = "0.2.0"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
axum-core = "~0.3"
bytes = "1.1.0"
futures-core = "0.3.21"
http = "0.2.6"
http-body = "0.4.4"
parking_lot = "0.12.0"
sea-orm = ">= 0.10"
thiserror = "1.0.30"
tower-layer = "0.3.1"
tower-service = "0.3.1"

[dev-dependencies]
axum = "~0.6"
hyper = "*"
sea-orm = {version = ">= 0.10", features = ["sqlx-sqlite", "runtime-tokio-rustls"]}
tempfile = "3.3.0"
tokio = {version = "1.17.0", features = ["macros"]}
tower = "0.4.12"
